[package]
name = "dotawatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
reqwest = { version = "0.11.27", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
serenity = "0.12.1"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
